# modern-python-template

./: README.md  pyproject.toml
src/modern_python_template/: __init__.py  cli.py
src/modern_python_template/modules/api/: util.py
tests/: test_cli.py
