[tool.poetry]
name = "modern-python-template"
version = "0.2.0"
description = "Modern Python project template with CLI utilities"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "modern_python_template", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[tool.poetry.scripts]
modern-python-template = "modern_python_template.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"